--- a/nextage_ros_bridge/package.xml
+++ b/nextage_ros_bridge/package.xml
@@ -21,6 +21,7 @@
   <build_depend>nextage_description</build_depend>
   <build_depend>roslint</build_depend>
   
+  <run_depend>freenect_launch</run_depend>
   <run_depend version_gte="1.0.17">hironx_ros_bridge</run_depend>
   <run_depend>nextage_description</run_depend>
   <run_depend>ueye_cam</run_depend>
